[package]
name = "arthas"
version = "0.1.1"
description = "Arthas is an in-memory structure database."
keywords = ["database", "in-memory", "structure", "db", "embedded"]
authors = ["fengcen <fengcen.love@gmail.com>"]
repository = "https://github.com/fengcen/arthas.git"
homepage = "https://github.com/fengcen/arthas"
documentation = "https://github.com/fengcen/arthas"
license = "MIT"

[lib]
name = "arthas"
path = "src/lib.rs"

[dependencies]
quick-error = "^1.1"
glob = "^0.2"
memmap = "^0.5"
bincode = "^0.6"
serde = "^0.8"
serde_json = "^0.8"
serde_derive = "^0.8"
libc = "^0.2"
num_cpus = "^1.2"
scoped-pool = "^1.0"
lazy_static = "^0.2"
quickersort = "^2.1"
log = "^0.3"
thread-id = "^3.0"
vec_map = "^0.6"
chrono = { version = "^0.2", features = ["serde"] }
objectid = { version = "^0.1", features = ["serde"] }

[dev-dependencies]
arthas_plugin = { version = "^0.1", path = "../arthas_plugin" }
maplit = "^0.1"
mktemp = "^0.3"
rand = "^0.3"
env_logger = "^0.3"
