[package]
name = "arthas_derive"
version = "0.1.0"
description = "Macros 1.1 implementation of #[derive(Arthas)]"
keywords = ["database", "in-memory", "structure", "db", "embedded"]
authors = ["fengcen <fengcen.love@gmail.com>"]
repository = "https://github.com/fengcen/arthas.git"
homepage = "https://github.com/fengcen/arthas"
documentation = "https://github.com/fengcen/arthas"
license = "MIT"

[lib]
name = "arthas_derive"
plugin = true
path = "src/lib.rs"
crate-type = ["proc-macro"]

[dependencies]
syn = "^0.11"
quote = "^0.3"
regex = "^0.1"
