[package]
name = "arthas_plugin"
version = "0.1.1"
description = "Compiler plugin for Arthas."
keywords = ["database", "in-memory", "structure", "db", "embedded"]
authors = ["fengcen <fengcen.love@gmail.com>"]
repository = "https://github.com/fengcen/arthas.git"
homepage = "https://github.com/fengcen/arthas"
documentation = "https://github.com/fengcen/arthas"
license = "MIT"

[lib]
name = "arthas_plugin"
plugin = true
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
regex = "^0.1"
ecp = "^0.1"
