[package]
name = "model"
description = "model"
version = "0.1.0"
authors = ["fengcen <fengcen.love@gmail.com>"]
repository = "https://github.com/fengcen/arthas.git"
license = "MIT"

[lib]
name = "model"
path = "src/lib.rs"

[dependencies]
serde = "^0.8"
serde_json = "^0.8"
serde_derive = "^0.8"
arthas_plugin = { version = "^0.1", path = "../../../arthas_plugin" }
arthas = { version = "^0.1", path = "../../"}
